--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1498,9 +1498,13 @@ border: 1px solid black;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  backdrop-filter: blur(3px); /* Adjust the blur radius as needed */
+  backdrop-filter: blur(3px) !important; /* Adjust the blur radius as needed */
 }
 
+.modal{
+  backdrop-filter: blur(3px) !important;
+  -webkit-backdrop-filter: blur(3px) !important;
+}
 
 .modal-content-c {
   background-color: #ffffff;
