--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -460,6 +460,19 @@ text-transform: uppercase;
     font-size: 1.5rem;
     font-weight: 600;
   }
+
+  .promo-price {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: calc(100% - 5rem); /* Adjust as needed */
+    color: #313131;
+    padding: 5px 10px;
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: 600;
+  }
   
   @media only screen and (max-width: 768px) {
     .promos-container {
@@ -488,10 +501,20 @@ text-transform: uppercase;
       font-size: 1rem;
       margin-bottom: 1.5rem;
     }
+
+    .promo-price {
+      max-width: calc(100% - 2rem);
+      font-size: 1rem;
+      margin-bottom: 1.5rem;
+      top: 15%;
+    }
   }
   
   @media only screen and (max-width: 350px) {
     .promo-details {
+      font-size: 0.7rem;
+    }
+    .promo-price {
       font-size: 0.7rem;
     }
   }
@@ -1796,6 +1819,18 @@ text-transform: uppercase;
     backdrop-filter: blur(3px) !important; /* Adjust the blur radius as needed */
   }
 
+  #successBookedModal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(3px) !important; /* Adjust the blur radius as needed */
+  }
+
   #rejectModal {
     display: none;
     position: fixed;
@@ -1862,107 +1897,6 @@ text-transform: uppercase;
   #addloc.custom-submit, #closeloc.custom-cancel{
     width: 150px;
   }
-  
-  /*Success Modal */
-  
-  #successModal {
-    display: none;
-    position: fixed;
-    z-index: 1000;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    backdrop-filter: blur(3px);
-  }
-  
-  .success-modal-content {
-    background-color: #ffffff;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 20px;
-    border: 1px solid #888;
-    width: 60%; /* Adjust the width as needed */
-    border-radius: 10px;
-    text-align: center;
-  }
-  
-  #successModal .close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-  }
-  
-  #successModal .close:hover,
-  #successModal .close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-  }
-  
-  #successModal #userInputs {
-  list-style-type: none;
-  padding: 0;
-  }
-  
-  #successModal #userInputs li {
-  margin-bottom: 10px;
-  }
-  
-  #successModal .custom-modal-content {
-  max-width: 700px; /* Adjust the maximum width as needed */
-  border-radius: 10px; /* Adjust the border-radius as needed */
-  padding: 20px; /* Adjust the padding as needed */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  }
-  
-  /* Add the following styles for centering the modal */
-  #successModal .success-modal-content {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  }
-  
-  .custom-title{
-    color: #ba181b;
-    font-size: 32px;
-    font-weight: bold;
-    /* letter-spacing: 2px; */
-    margin: 0%;
-    padding: 0%;
-  }
-  
-  .custom-title2{
-    color: #04B300;
-    font-size: 32px;
-    font-weight: bold;
-    letter-spacing: 2px;
-  }
-  
-  .custom-button2{
-    width: 328px;
-    height: 54px;
-    flex-shrink: 0;
-    background-color: #1E1E1E;
-    color: #ffffff;
-    border-radius: 39px;
-    mix-blend-mode: darken;
-    box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.25);
-    align-items: center;
-    justify-content: center;
-  }
-  
-  #successModal .custom-modal-content .custom-button2 {
-    margin-top: 20px; /* Adjust the margin as needed */
-  }
-  
   
   .confirmation-row {
     display: flex;
@@ -2655,4 +2589,12 @@ footer {
     .section_container .services_items img {
         max-width: 80%;
     }
+}
+
+@media (max-width: 768px) { /* Adjust max-width as needed */
+  .modal-content-c p,
+  .modal-content-c h6,
+  .modal-content-c button {
+      font-size: 0.7rem; /* Adjust the font size to your preference */
+  }
 }
